Fixed bug with facebook and github button that was causing excess whitespace on right side of page. Also added comment at the end of the css file that outlines every element on page ( good for debugging)

--- a/main.css
+++ b/main.css
@@ -650,6 +650,12 @@ header {
 
     max-height:100px;
 }
+.button-container{
+    position:relative;
+
+    max-height:100px;
+    max-width:100px;
+}
 
 .contact-image{
     width:7.2vw;
@@ -774,6 +780,13 @@ header {
 #facebook-button:hover {
     background-size: 160px;
 }
+/* UnComment this if excess width is appearing on your page */
+/*
+* {
+    background: #000 !important;
+    color: #0f0 !important;
+    outline: solid #f00 1px !important;
+}*/
 
 
 
